clojure: 教程重构为 28 章分章文档（docs/），深度扩充讲透 + CHEATSheet；修复三路快排丢 pivot 实测 bug
- 单文件指南拆分为 docs/01-28（对齐 rust/kotlin/llvm 教程约定）：
  每章 ~100-140 行，编号小节 + 坑位清单 + 章间导航，⭐ 标重点章
- 新增 CHEATSheet.md：语法速查 + 46 条语言坑 + 8 条 Windows 工具坑索引
- 文档代码断言全部实测复核，修正 7 处错误：
  record≠map 相等（实测 false）、compare nil 不抛异常（-1）、
  take 不触发惰性（消费才触发）、cat 裸进 comp、halt-when 返回触发值、
  spec 生成器需 test.check、UTF-16 codePointCount
- 修复 examples/19 三路快排真实 bug：equal 段不含 pivot，每层丢一个
  （[3 1 2 3 1 2 3 3] 排成 5 个元素）——标记验证抓不住内容错误，
  增加对账断言说明；拓扑排序末批节点丢失、Dijkstra ##Inf 占位也已实测修正
- 删除 Clojure编程指南.md（内容全部并入 docs/），README 重写为章节索引表
- 全量终验 25/25 全绿（含修复后的示例 19）